--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>小游戏组</title>
+        <title>t</title>
     </head>
     <body>
         test
